--- a/Quiz/index.html
+++ b/Quiz/index.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8" />
     <title>Technical Questions</title>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/0.5.0-beta4/html2canvas.min.js"></script>
     <script src="script.js" defer></script>
     <style>
-
         #timer {
             position: fixed;
             top: 10px;
@@ -13,6 +14,7 @@
             font-size: 1.5em;
             margin-bottom: 20px;
         }
+
         .submit-button {
             margin-top: 50px; /* Adjust this value as needed */
         }
@@ -23,6 +25,7 @@
     <h1>Technical Questions</h1>
     <div id="timer">Time Remaining: <span id="timerDisplay">00:00</span></div>
     <div id="questionContainer"></div>
+    <button id="submit-button">Submit Answers</button>
     <div id="result"></div>
 </body>
 </html>
